gcc/testsuite/rust/rustc/ui/codemap_tests/empty_span.rs
#![feature(negative_impls)]
fn main() {
    struct Foo;

    impl !Sync for Foo {}

    unsafe impl Send for &'static Foo { } // { dg-error ".E0321." "" { target *-*-* } }
}

